# needy-appliances

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
face-detection/: Cargo.toml  README.md  app.py  face.py  frame_batcher.py  requirements.txt  run.sh
face-detection/app/: config.py  frame_batcher.py  main.py
frontend/: package.json  svelte.config.js  vite.config.ts
frontend/src/lib/: app.ts
frontend/src/lib/styles/: style.css
frontend/src/routes/: +layout.svelte  +page.svelte
install/: installScripts.sh
install/scripts/: face-detection.sh  mosquitto.sh  socket-server.sh  voice-engine.sh
install/serviceFiles/: qrl-face-detection.service  qrl-socket-server.service  qrl-voice-engine.service
mqtt-slave/: platformio.ini
mqtt-slave/boards/: esp8266_1M.json
mqtt-slave/src/: action.cpp  action.h  main.cpp
mqtt/config/: mosquitto.conf
socket-server/: Cargo.toml
socket-server/src/: main.rs  mqtt.rs  public.rs  socket.rs
socket-server/src/public/: index.html
socket-server/src/public/_app/: version.json
socket-server/src/public/_app/immutable/assets/: _layout.1a37c92a.css  _layout.70b0dda3.css  _page.3e18de9c.css  _page.4cb1d67b.css  _page.5e325e71.css  _page.7c21ad84.css
socket-server/src/public/_app/immutable/chunks/: 0.1898ffeb.js  0.de635541.js  1.94e2fa91.js  1.b63af3bc.js  1.ea5eb1d5.js  2.9cdccd36.js  2.a81015a9.js  2.fa3681d7.js  app.b347193c.js  app.cb1790eb.js  index.341fe77f.js  index.f99c9f29.js  singletons.20413626.js  singletons.ad36979e.js  singletons.dbfef127.js
socket-server/src/public/_app/immutable/entry/: _layout.svelte.7ce4e32b.js  _layout.svelte.d4db2e9e.js  _page.svelte.2f23a0c3.js  _page.svelte.79793d39.js  _page.svelte.8ae6c168.js  app.304a1ab1.js  app.44a52975.js  app.f3c7c992.js  error.svelte.4065ea9d.js  error.svelte.5a4d1c41.js  error.svelte.c70d54cf.js  start.173baf91.js  start.2b5f05f0.js  start.36817b8f.js
voice-engine/: .env  .env template  .gitignore  ai.py  main.py  process_ai.py  process_mqtt.py  pyproject.toml  requirements.txt  run.sh  speech_to_text.py  sst (speech_rec).py  sst.py  text_to_speech.py  tts.py
voice-engine/archive/: speech_to_text (unused_whisper).py
