[project]
name = "voice-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.75.0",
    "paho-mqtt==1.6.1",
    "playsound>=1.3.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.0",
    "pyttsx3>=2.98",
    "requests>=2.32.3",
    "speechrecognition>=3.14.2",
]
